objects/DynamicFlowComponent__mdt.object
<CustomObject>
    <fields>
        <fullName>AutoLaunchedOutputVariables__c</fullName>
        <inlineHelpText>Tell the component about any additional parameters it does not already know about (see docs)</inlineHelpText>
        <label>Autolaunched Output Variables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <label>Flow</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAutoLaunched__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In order to use Autolaunched Flows you must also complete setup via the Flow Factory tab</inlineHelpText>
        <label>Is Autolaunched</label>
        <type>Checkbox</type>
    </fields>
    <label>Dynamic Flow Component</label>
    <pluralLabel>Dynamic Flow Components</pluralLabel>
</CustomObject>